# bare-metal-manager-core

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-license-scanning.yml  .gitmodules  .license-config.yml  .nspect-vuln-allowlist.toml  .pre-commit-config.yaml  3rd-party-licenses.json  3rd-party-licenses.txt  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  Makefile-build.toml  Makefile-package.toml  Makefile.toml  README.md  STYLE_GUIDE.md  THIRD-PARTY-LICENSES  TODO.md  Vagrantfile  cog.toml  deny.toml  devspace.yaml  docker-compose.yml  go.mod  initialize_host_ingestion.py  justfile  ndash.build.dockerfile  ndash.jenkinsfile  ndash.jenkinsfile.deploy  rust-toolchain.toml  skaffold-minikube.yml  skaffold.yaml  skaffold.yml
admin/: Cargo.toml  build.rs
admin/src/: async_write.rs  bmc_machine.rs  devenv.rs  domain.rs  dpa.rs  dpu.rs  dpu_remediation.rs  expected_machines.rs  firmware.rs  host.rs  ib_partition.rs  instance.rs  instance_type.rs  inventory.rs  machine.rs  machine_interfaces.rs  machine_validation.rs  main.rs  managed_host.rs  migrate.rs  network.rs  network_devices.rs  network_security_group.rs  ping.rs  redfish.rs  resource_pool.rs  rpc.rs  site_explorer.rs  sku.rs  storage.rs  tenant_keyset.rs  tpm.rs  uefi.rs  version.rs  vpc.rs  vpc_peering.rs  vpc_prefix.rs
api/: Cargo.toml  Dockerfile  build.rs  casbin-policy.csv
api-test/: Cargo.toml
api/db/: Cargo.toml  build.rs
api/integration-tests/: Cargo.toml
api/migrations/: 20211119192131_initial.sql  20211119192330_networks.sql  20211215003449_add_machine_userdata.sql  20220228232253_add_domains_table.sql  20220228233136_network_segments_subdomain_id.sql  20220314233142_add_projects_table.sql  20220815220815_add_dhcp.sql  20220816184359_dpu_machines.sql  20220816195434_instance_subnet_events_spelling.sql  20220818192500_organization_uuid_to_string.sql  20220830153901_add_deleted_column_to_domain.sql  20220830220627_add_deleted_column_to_networksegment.sql  20220912161126_add_loopback_ip_vpc_resource_leaf.sql  20220920210447_add_bmc_machine_constraint.sql  20220921102300_add_userdata_customipxe_sshkeys_col_instance.sql  20220930082156_instance_dhcp_view.sql  20221004065908_prefix_validation.sql  20221007101010_machine_state_lock.sql  20221012084258_instance_build_flag.sql  20221024120000_add_subnet_and_vpc_versions.sql  20230313112432_add_tenant_keysets.sql  20230315120000_stable_machine_id_only.sql  20230622131415_k8_vpc_removal.sql  20240129175752_last_reboot_requested.sql  20240501000000_block_storage.sql  20240827101700_machine_validation.sql  20241007140300_replace_desired_firmware.sql  20241119120000_machine_log_parser_health_report.sql
api/model/: Cargo.toml
api/src/: api.rs  attestation.rs  auth.rs  bg.rs  db_init.rs  dhcp_discover.rs  dpa.rs  dynamic_settings.rs  errors.rs  ethernet_virtualization.rs  human_hash.rs  ip_finder.rs  ipmi.rs  ipmitool.rs  ipxe.rs  kubernetes.rs  lib.rs  listener.rs  main.rs  reachability.rs  redfish.rs  run.rs  setup.rs  storage.rs  test_logging.rs  vault.rs  vpc.rs
api/templates/: attestation_results.html  attestation_summary.html  base.html  bmc_reset.html  domain_show.html  dpa_detail.html  dpu_versions.html  expected_machine_show.html  explored_endpoint_detail.html  explored_endpoints_show.html  explored_endpoints_show_paired.html  ib_partition_detail.html  ib_partition_show.html  index.html  instance_detail.html  instance_show.html  instance_type_detail.html  instance_type_show.html  interface_detail.html  interface_show.html  ip_finder.html  machine_detail.html  machine_detail.html.orig  machine_health.html  machine_health_component.html  machine_health_history.html  machine_health_history_table.html  machine_show.html  machine_state_history_table.html  managed_host_detail.html  managed_host_grouped_table.html  managed_host_individual_table.html  managed_host_show.html  network_device_show.html  network_security_group_detail.html  network_security_group_show.html  network_segment_detail.html  network_segment_show.html  network_status.html  power_control.html  (+19 more)
api/tests/: attestation.rs  auth.rs  bmc_machine.rs  connected_device.rs  create_domain.rs  create_instance_type.rs  create_network_segment.rs  dns.rs  dpu_agent_upgrade.rs  dpu_bmc_firmware.rs  dpu_bmc_machine.rs  dpu_host_machine.rs  dpu_info_list.rs  dpu_machine.rs  dpu_machine_inventory.rs  dpu_machine_update.rs  dpu_nic_firmware.rs  dpu_reprovisioning.rs  dynamic_config.rs  expected_machine.rs  explored_endpoint_find.rs  explored_managed_host_find.rs  find_all_machines_when_there_are_none.rs  finder.rs  host_bmc_firmware_test.rs  ib_fabric_monitor.rs  ib_instance.rs  ib_partition_find.rs  ib_partition_lifecycle.rs  ib_subnet_lifecycle.rs  instance.rs  instance_config_update.rs  instance_find.rs  instance_ipxe_behaviors.rs  instance_os.rs  instance_subnets.rs  instance_type.rs  integration.rs  ip_finder.rs  ipmi.rs  (+52 more)
bluefield/agent/: Cargo.toml  example_agent_config.toml
bluefield/certs/: Cargo.toml
bluefield/remediation/: Cargo.toml
bluefield/systemd/: Cargo.toml
bluefield/utils/: Cargo.toml
carbide/: Cargo.toml  build.rs
carbide/proto/: carbide.proto
carbide/src/: lib.rs
carbide/tests/: machines.rs  network_segments.rs
cli/: Cargo.toml  LICENSE  Makefile.toml
cli/src/: discovery.rs  done.rs  ipmi.rs  lib.rs  main.rs  register.rs  users.rs
cli/test/: lan_print.txt  user_list.csv
dhcp/: Cargo.toml  Dockerfile  build.rs  logger.cc  logger.h
dhcp-server/: Cargo.toml  Makefile.toml
dhcp-server/conf/: conf.yaml
dns/: Cargo.toml  Dockerfile
forge-http-connector/: Cargo.toml
forge_credentials/: Cargo.toml
forge_secrets/: Cargo.toml
fuzz/: Cargo.toml
health/: Cargo.toml
host-support/: Cargo.toml
log-parser/: Cargo.toml
pxe/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  Rocket.toml  artifacts.json  build.rs  mkosi.conf  mkosi.default  mkosi.postinst  wget_deb_urls
rpc/: Cargo.toml  build.rs  rpc_grpc.pb.go
scout/: Cargo.toml  Makefile.toml
services/: Cargo.toml
ssh-console/: Cargo.toml  README.md
(+4269 files in other folders)
