[workspace]
resolver = "2"
members = [
    "admin",
    "api",
    "api-test",
    "bluefield/agent",
    "common/carbide-macros",
    "common/bmc-vendor",
    "common/config-version",
    "common/dsocket",
    "common/health-report",
    "common/host-support",
    "common/http-connector",
    "common/logfmt",
    "common/measured-boot",
    "common/metrics-endpoint",
    "common/secrets",
    "common/tls",
    "common/utils",
    "common/version",
    "dev/bmc-mock",
    "dev/machine-a-tron",
    "dhcp",
    "dhcp-server",
    "dns",
    "health",
    "log-parser",
    "pxe",
    "rpc",
    "scout",
]

[workspace.package]
edition = "2021"
license-file = "LICENSE"
authors = ["NVIDIA Forge Engineering <swngc-forge-dev@exchange.nvidia.com>"]

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
libredfish = { version = "0.29.1", registry = "sw-ngc-forge-cargo-local" }
libnvmesh = { version = "0.1.4", registry = "sw-ngc-forge-cargo-local" }

tokio = { version = "1", features = ["full", "tracing"] }
tokio-rustls = { version = "0.26" }

tonic = { version = "0.12", features = ["tls"] }
strum = "0.26.3"
strum_macros = "0.26.4"

hyper = { version = "^1" }
hyper-rustls = { version = "^0.27" }
hyper-timeout = { version = "^0.5" }
hyper-util = { version = "^0.1" }

rustls = { version = "0.23.16" }
rustls-pki-types = "1.10.0"
sqlx = { version = "0.8.3" }

########
# MARK: - Pinned packages that we can't upgrade due to conflicts or just bugs
########

# pinning opentelemetry:
# Opentelemetry guage metrics are broken when using a prometheus exporter in opentelemetry v0.25 and later. Stale metrics never clear out, see https://github.com/open-telemetry/opentelemetry-rust/issues/2213
# We're stuck on 0.24 until this is fixed.
opentelemetry = { version = "0.24", features = ["logs"] }
opentelemetry_sdk = { version = "0.24", features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = [
    "metrics",
] } # Any newer and it requires 0.26 :(
# Other otel crates can be on latest versions, per testing
opentelemetry-prometheus = { version = "0.17.0" }
opentelemetry-http = "0.27"
opentelemetry-semantic-conventions = "0.27"

# pinning ipnetwork:
# Newer versions (0.21.x and later) don't seem to have working sqlx::Decode support. This will probably be fixed in a
# newer sqlx version.
ipnetwork = "0.20.0"

# pinning axum:
# Tonic does not support axum 0.8 or later. Until it does, pin axum to 0.7 and the related crates to the corresponding
# (working) versions.
axum = "0.7.9"
axum-extra = "0.9" # Pin this until we can update axum
axum-client-ip = "0.6"
axum-template = { version = "2.4" }

[profile.release]
debug = true            # Enable debuginfo
debug-assertions = true # Add some extra assurance during development
overflow-checks = true  # Add some extra assurance during development