[workspace]
resolver = "2"
members = [
    "admin",
    "api",
    "bluefield/agent",
    "bluefield/otel/otel-agent",
    "common/api-test-helper",
    "common/carbide-macros",
    "common/bmc-vendor",
    "common/config-version",
    "common/dsocket",
    "common/health-report",
    "common/host-support",
    "common/http-connector",
    "common/logfmt",
    "common/measured-boot",
    "common/metrics-endpoint",
    "common/mlxconfig/profile",
    "common/mlxconfig/registry",
    "common/mlxconfig/runner",
    "common/mlxconfig/variables",
    "common/mqttea",
    "common/secrets",
    "common/sqlx-testing",
    "common/ssh",
    "common/tls",
    "common/tonic-client-wrapper",
    "common/utils",
    "common/uuid",
    "common/version",
    "dev/bmc-mock",
    "dev/machine-a-tron",
    "dev/mlxconfig-embedded",
    "dev/mqttea-example",
    "dhcp",
    "dhcp-server",
    "dns",
    "health",
    "log-parser",
    "pxe",
    "rpc",
    "scout",
    "ssh-console",
    "ssh-console/mock_api_server",
    "fuzz",
]

[workspace.package]
edition = "2024"
license-file = "LICENSE"
authors = ["NVIDIA Forge Engineering <swngc-forge-dev@exchange.nvidia.com>"]

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
libredfish = { version = "0.29.73", registry = "sw-ngc-forge-cargo-local" }
libnvmesh = { version = "0.1.4", registry = "sw-ngc-forge-cargo-local" }
ansi-to-html = "0.2.2"

tokio = { version = "1", features = ["full", "tracing"] }
tokio-rustls = { version = "0.26" }

tonic = { version = "0.14", features = ["tls-ring"] }
strum = "0.26.3"
strum_macros = "0.26.4"

hyper = { version = "^1" }
hyper-rustls = { version = "^0.27" }
hyper-timeout = { version = "^0.5" }
hyper-util = { version = "^0.1" }

rustls = { version = "0.23.16" }
rustls-pki-types = "1.10.0"
sqlx = { version = "0.8.3" }
sqlx-core = { version = "0.8.3" }

opentelemetry = { version = "0.28.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.28.0", features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = [
    "metrics",
] }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry-semantic-conventions = "0.28.0"
# tracing-opentelemetry 0.29.0 seems to correspond to opentelemetry 0.28.0, confusingly enough.
tracing-opentelemetry = "0.29.0"

########
# MARK: - Pinned packages that we can't upgrade due to conflicts or just bugs
########

# pinning ipnetwork:
# Newer versions (0.21.x and later) don't seem to have working sqlx::Decode support. This will probably be fixed in a
# newer sqlx version.
ipnetwork = "0.20.0"

# pinning axum:
# Tonic does not support axum 0.8 or later. Until it does, pin axum to 0.7 and the related crates to the corresponding
# (working) versions.
axum = "0.8.4"
axum-extra = "0.10" # Pin this until we can update axum
axum-client-ip = "1.1.3"
axum-template = { version = "3.0" }

[profile.release]
debug = true            # Enable debuginfo
debug-assertions = true # Add some extra assurance during development
overflow-checks = true  # Add some extra assurance during development

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
redundant_clone = "warn"
large_stack_arrays = "warn"
