[package]
name = "admin"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
name = "forge-admin-cli"
path = "src/main.rs"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../common/bmc-vendor" }
forge-network = { path = "../common/network" }
forge-ssh = { path = "../common/ssh" }
forge-tls = { path = "../common/tls" }
forge-uuid = { path = "../common/uuid" }
forge-version = { path = "../common/version" }
forge_secrets = { path = "../common/secrets" }
health-report = { path = "../common/health-report" }
measured-boot = { path = "../common/measured-boot", features = ["cli"] }
rpc = { path = "../rpc", features = ["cli"] }
utils = { path = "../common/utils" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

chrono = "0.4.34"
clap = { workspace = true }
clap_complete = "*"
color-eyre = "*"
csv = "1.3.1"
eyre = "*"
futures = "0.3"
ipnet = "2.10.1"
libredfish = { workspace = true }
mac_address = "1.1.2"
prettytable-rs = "^0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.25"
tokio = { workspace = true }
toml = "0.8.8"
tonic = { workspace = true }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
uuid = "1.0"
x509-parser = { version = "0.17.0", features = ["validate"] }

[build-dependencies]
clap = { workspace = true }
forge-version = { path = "../common/version" }

[lints]
workspace = true
