[package]
name = "carbide-admin-cli"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to carbide-admin-cli
name = "forge-admin-cli"
path = "src/main.rs"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../common/bmc-vendor" }
carbide-network = { path = "../common/network" }
carbide-ssh = { path = "../common/ssh" }
carbide-tls = { path = "../common/tls" }
carbide-uuid = { path = "../common/uuid" }
carbide-version = { path = "../common/version" }
carbide-secrets = { path = "../common/secrets" }
carbide-health-report = { path = "../common/health-report" }
carbide-measured-boot = { path = "../common/measured-boot", features = ["cli"] }
carbide-rpc = { path = "../rpc", features = ["cli"] }
carbide-utils = { path = "../common/utils" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

chrono = "0.4.34"
clap = { workspace = true }
clap_complete = "*"
color-eyre = "*"
csv = "1.3.1"
eyre = "*"
futures = "0.3"
ipnet = "2.10.1"
libredfish = { workspace = true }
mac_address = "1.1.2"
prettytable-rs = "^0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.25"
tokio = { workspace = true }
toml = "0.8.8"
tonic = { workspace = true }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
uuid = "1.0"
x509-parser = { version = "0.17.0", features = ["validate"] }

[build-dependencies]
clap = { workspace = true }
carbide-version = { path = "../common/version" }

[lints]
workspace = true
