[package]
name = "carbide-admin-cli"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to carbide-admin-cli
name = "forge-admin-cli"
path = "src/main.rs"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../common/bmc-vendor" }
carbide-network = { path = "../common/network" }
carbide-ssh = { path = "../common/ssh" }
carbide-tls = { path = "../common/tls" }
carbide-uuid = { path = "../common/uuid" }
carbide-version = { path = "../common/version" }
carbide-secrets = { path = "../common/secrets" }
carbide-health-report = { path = "../common/health-report" }
carbide-measured-boot = { path = "../common/measured-boot", features = ["cli"] }
carbide-rpc = { path = "../rpc", features = ["cli"] }
carbide-utils = { path = "../common/utils" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
color-eyre = { workspace = true }
csv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
prettytable-rs = { workspace = true }
serde = { features = ["derive"] , workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter", "local-time"] , workspace = true }
uuid = { workspace = true }
x509-parser = { features = ["validate"] , workspace = true }

[build-dependencies]
clap = { workspace = true }
carbide-version = { path = "../common/version" }

[lints]
workspace = true
