[package]
name = "api-test"
version = "0.1.0"
edition = "2021"
description = "End-to-end test for carbide-api"
license = "LicenseRef-NvidiaProprietary"
authors = ["NVIDIA Forge Engineering <swngc-forge-dev@exchange.nvidia.com>"]

[dev-dependencies]
chrono = "0.4"
eyre = "*"
ipnetwork = { version = "^0.20.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "mac_address", "ipnetwork", "uuid", "migrate", "postgres", "chrono", "macros", "json"] }
tempfile = "3"
tokio.workspace = true
toml = "0.8.8"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }

# local dependencies
agent = { path = "../bluefield/agent" }
bmc-mock = { path = "../dev/bmc-mock" }
carbide-api = { path = "../api" }
forge-host-support = { path = "../host-support" }
forge-version = { path = "../version" }
rpc = { path = "../rpc" }

[dependencies]
async-trait = "0.1.72"

[build-dependencies]
forge-version = { path = "../version" }
