[package]
name = "api-test"
version = "0.1.0"
description = "End-to-end test for carbide-api"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dev-dependencies]
chrono = "0.4.34"
eyre = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serial_test = "3"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mac_address", "ipnetwork", "uuid", "migrate", "postgres", "chrono", "macros", "json"] }
tempfile = "3"
tokio.workspace = true
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
futures = "0.3"
itertools = "0.14"
ctor = "0.2"

# [local-dependencies]
agent = { path = "../bluefield/agent" }
bmc-mock = { path = "../dev/bmc-mock" }
carbide-api = { path = "../api" }
forge-version = { path = "../common/version" }
rpc = { path = "../rpc" }
machine-a-tron = { path = "../dev/machine-a-tron" }
forge-tls = { path = "../common/tls" }
forge_secrets = { path = "../common/secrets" }
utils = { path = "../common/utils" }
metrics-endpoint = { path = "../common/metrics-endpoint" }

[build-dependencies]
forge-version = { path = "../common/version" }
