[package]
name = "carbide-api"
version = "0.0.1"
edition.workspace = true
description = "Carbide is a Bare Metal Provisioning system with auto-discovery and API based machine manipulation"
license-file.workspace = true
authors.workspace = true

[lib]
name = "carbide"

[[bin]]
name = "carbide-api"
path = "src/main.rs"

[dependencies]
arc-swap = "1.6"
askama = "0.12.1"
askama_escape = "0.10"
async-trait = "*"
axum = { version = "0.7", features = ["http2"] }
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.8.0"
casbin = { version = "2.0", features = ["glob"] }
chrono = "0.4.34"
clap = { workspace = true }
const_format = "0.2.26"
dashmap = "6.1.0"
data-encoding = "2.3.3"
domain = "0.10.1"
eyre = "*"
figment = { version = "0.10.10", features = ["env", "toml"] }
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
http = "1"
http-body = { version = "1" }
http-body-util = { version = "^0.1" }
hyper = { workspace = true, features = ["full"] }
hyper-rustls = { workspace = true }
hyper-timeout = { workspace = true }
hyper-util = { workspace = true }
ipnetwork = { version = "^0.20.0", features = ["serde"] }
itertools = "*"
lazy_static = "1.5.0"
libredfish = { workspace = true }
libnvmesh = { workspace = true }
mac_address = "1.1.2"
md5 = "0.7"
names = { version = "0.14.0", default-features = false }
num_cpus = "1.16.0"
num-bigint-dig = "0.8.4"
octseq = "0.5.1"
oid-registry = "0.7"
once_cell = "1.13.1"
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }
opentelemetry-prometheus.workspace = true
opentelemetry_sdk = { workspace = true, features = ["logs", "rt-tokio"] }
toml = "0.8.8"
patricia_tree = "^0"
prettytable-rs = "^0.10"
prometheus = "0.13"
pkcs1 = "0.7.5"
rand = "0.8"
regex = "1.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rsa = "0.9.6"
rustls = { workspace = true, features = ["default", "ring"] }
rustls-pki-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_regex = "*"
sha2 = "0.10.3"
strum_macros = "*"
strum = "*"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mac_address", "ipnetwork", "uuid", "migrate", "postgres", "chrono", "macros", "json"] }
thiserror = "2.0"
tempdir = "0.3.7"
tokio = { workspace = true }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
tokio-stream = "*"
tonic = { workspace = true }
tonic-reflection = "0.12"
url = { version = "2", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "auth",
    "normalize-path",
] }
tower-layer = "0.3"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
tss-esapi = { version = "7.5.0", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
vaultrs = "0.7"
version-compare = "0.2.0"
webpki = { version = "0.22.4", features = ["alloc", "std"] }
x509-parser = { version = "0.16.0", features = ["verify"] }

# [local-dependencies]
bmc-vendor = { path = "../common/bmc-vendor" }
config-version = { path = "../common/config-version", features = ["sqlx"] }
forge-network = { path = "../common/network", features = ["sqlx"] }
forge-tls = { path = "../common/tls" }
forge-uuid = { path = "../common/uuid", features = ["sqlx"] }
forge_secrets = { path = "../common/secrets" }
forge-version = { path = "../common/version" }
health-report = { path = "../common/health-report" }
logfmt = { path = "../common/logfmt" }
rpc = { path = "../rpc" }
utils = { path = "../common/utils", features = ["sqlx"] }
duration-str = "0.11.2"
prost-types = "0.13"
rcgen = "0.13.1"
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
oauth2 = { version = "4.4.2", default-features = false }
time = "0.3.36"

[build-dependencies]
forge-version = { path = "../common/version" }

[dev-dependencies]
figment = { version = "0.10.10", features = ["env", "test", "toml"] }
ctor = "0.2"
lazy_static = "1.4.0"
