[package]
name = "carbide-api"
version = "0.0.1"
edition.workspace = true
description = "Carbide is a Bare Metal Provisioning system with auto-discovery and API based machine manipulation"
license-file.workspace = true
authors.workspace = true

[lib]
name = "carbide"

[[bin]]
name = "carbide-api"
path = "src/main.rs"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../common/bmc-vendor" }
config-version = { path = "../common/config-version", features = ["sqlx"] }
carbide-host-support = { path = "../common/host-support", default-features = false }
carbide-network = { path = "../common/network", features = ["sqlx"] }
carbide-secrets = { path = "../common/secrets" }
carbide-version = { path = "../common/version" }
carbide-health-report = { path = "../common/health-report" }
logfmt = { path = "../common/logfmt" }
carbide-mlxconfig-device = { path = "../common/mlxconfig/device" }
mqttea = { path = "../common/mqttea" }
carbide-rpc = { path = "../rpc", features = ["sqlx"] }
carbide-utils = { path = "../common/utils", features = ["sqlx"] }
carbide-ssh = { path = "../common/ssh" }
carbide-uuid = { path = "../common/uuid", features = ["sqlx"] }
carbide-measured-boot = { path = "../common/measured-boot", features = ["sqlx"] }
carbide-api-model = { path = "./model" }
carbide-api-db = { path = "./db" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
ansi-to-html = { workspace = true }
arc-swap = "1.6"
askama = { version = "0.12.1", features = ["serde-json"] }
askama_escape = "0.10"
asn1-rs = "0.7.0"
async-trait = "*"
axum = { workspace = true, features = ["http2"] }
axum-extra = { workspace = true, features = ["cookie", "cookie-private"] }
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.8.0"
casbin = { version = "2.0", features = ["glob"] }
chrono = "0.4.34"
clap = { workspace = true }
dashmap = "6.1.0"
data-encoding = "2.3.3"
duration-str = "0.12.0"
eyre = "*"
figment = { version = "0.10.10", features = ["env", "toml"] }
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
http = "1"
http-body-util = { version = "^0.1" }
hyper = { workspace = true, features = ["full"] }
hyper-rustls = { workspace = true }
hyper-timeout = { workspace = true }
hyper-util = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
itertools = "*"
lazy_static = "1.5.0"
libnvmesh = { workspace = true }
libredfish = { workspace = true }
mac_address = "1.1.2"
md5 = "0.7"
num-bigint-dig = "0.8.4"
num_cpus = "1.16.0"
oauth2 = { version = "5", default-features = false }
oid-registry = "0.8"
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry-prometheus.workspace = true
opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = ["logs", "rt-tokio", "spec_unstable_metrics_views", "testing"] }
pkcs1 = "0.7.5"
prometheus = "0.13"
rand = "0.9"
regex = "1.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rsa = "0.9.6"
rumqttc = "0.24"
rustls = { workspace = true, features = ["default", "ring"] }
rustls-pemfile = "2.2"
rustls-pki-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
sha2 = "0.10.3"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mac_address", "ipnetwork", "uuid", "migrate", "postgres", "chrono", "macros", "json"] }
strum = "0.26.2"
temp-dir = "0.1.14"
thiserror = "2.0"
time = "0.3.36"
tokio = { workspace = true }
tokio-rustls = "0.26"
toml = "0.8.8"
tonic = { workspace = true }
tonic-reflection = "0.12"
tower = "0.5"
tower-http = { version = "0.6.1", features = ["add-extension", "auth", "normalize-path", ] }
tracing = "*"
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }
tss-esapi = { version = "7.5.0", optional = true }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
version-compare = "0.2.0"
x509-parser = { version = "0.17.0", features = ["verify"] }
#these are alphabetized

[features]
default = ["linux-build"]
linux-build = [
    "tss-esapi",
    "carbide-sqlx-testing/linux-build",
    "carbide-host-support/linux-build",
]

[build-dependencies]
carbide-version = { path = "../common/version" }

[dev-dependencies]
figment = { version = "0.10.10", features = ["env", "test", "toml"] }
ctor = "0.2"
lazy_static = "1.4.0"
const_format = "0.2.26"
rcgen = "0.13.1"
carbide-macros = { path = "../common/carbide-macros" }
carbide-sqlx-testing = { path = "../common/sqlx-testing", default-features = false }
prometheus-text-parser = { path = "../common/prometheus-text-parser" }

[lints]
workspace = true
