[package]
name = "cli"
version = "0.0.1"
edition = "2018"

[[bin]]
name = "carbide-cli"
path = "src/main.rs"

[dependencies]
# protobufs/rpc interface
rpc = { path = "../rpc" }
tonic = "0.7.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

log = "*"
once_cell = "*"
tokio = { version = "*", features = ["rt"] }
thiserror = "1.0"
procfs = "*"
libudev = "*"
color-eyre = "0.5.11"
pretty_env_logger = "*"
uuid = "0.8.2"
uname = "0.1.1"

# cli
clap = { version = "~3", features = ["derive"] }
regex = "1.6.0"
rand = "0.8.5"
