[package]
name = "cli"
version = "0.0.1"
edition.workspace = true
license-file = "LICENSE"
authors = ["NVIDIA Forge Engineering <swngc-forge-dev@exchange.nvidia.com>"]

[[bin]]
name = "carbide-cli"
path = "src/main.rs"

[dependencies]
# protobufs/rpc interface
rpc = { path = "../rpc" }
tonic = "0.8.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
libc = "0.2"
rlimit = "0.6.2"

log = "*"
once_cell = "*"
tokio = { workspace = true }
thiserror = "1.0"
procfs = "*"
libudev = "*"
color-eyre = "0.5.11"
pretty_env_logger = "*"
uuid = "1.0"
uname = "0.1.1"

# cli
clap = { version = "~3", features = ["derive"] }
regex = "1.6.0"
rand = "0.8.5"
