[package]
name = "carbide-dhcp-server"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# TODO: rename to carbide-dhcp-server
name = "forge-dhcp-server"
path = "src/main.rs"

[dependencies]

# [local-dependencies]
carbide-tls = { path = "../common/tls" }
logfmt = { path = "../common/logfmt" }
carbide-rpc = { path = "../rpc" }
carbide-utils = { path = "../common/utils" }
carbide-uuid = { path = "../common/uuid" }

serde_yaml = "0.9.27"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { workspace = true }
tonic = { workspace = true }
ipnetwork = { workspace = true }
clap = { version = "4.4.7", features = ["derive"] }
dhcproto = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
] }
thiserror = "2.0.3"
lru = "0.13.0"
socket2 = "0.5.5"
chrono = "0.4.38"
futures = "*"

[lints]
workspace = true
