[package]
name = "carbide-dhcp-server"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# TODO: rename to carbide-dhcp-server
name = "forge-dhcp-server"
path = "src/main.rs"

[dependencies]

# [local-dependencies]
carbide-tls = { path = "../common/tls" }
logfmt = { path = "../common/logfmt" }
carbide-rpc = { path = "../rpc" }
carbide-utils = { path = "../common/utils" }
carbide-uuid = { path = "../common/uuid" }

serde_yaml = { workspace = true }
serde = { features = ["derive"] , workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
ipnetwork = { workspace = true }
clap = { features = ["derive"] , workspace = true }
dhcproto = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
    "env-filter",
    "local-time",
] , workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
socket2 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
