[package]
name = "dhcp"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_builder = "*"
eyre = "*"
hyper = "0.14.27"
ipnetwork = "*"
lazy_static = "1.4.0"
libc = "*"
log = "*"
lru = "0.12.1"
mac_address = "*"
once_cell = "*"
opentelemetry = "0.21.0"
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry-prometheus = "0.14.1"
opentelemetry-otlp = { version = "0.14.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.1", features = ["logs", "rt-tokio"] }
prost = "0.12"
tokio = { workspace = true }
tonic = { workspace = true }
uuid = "1.0"

# [local-dependencies]
rpc = { path = "../rpc" }
forge-tls = { path = "../common/tls" }

[dev-dependencies]
eyre = "*"
dhcproto = "0.9.0"
serde_json = "1.0.89"
test-cdylib = "1.1.0"
tempfile = "3"

[build-dependencies]
cbindgen = "*"
cc = "1.0"
