[package]
name = "dhcp"
version = "0.0.1"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.34"
derive_builder = "*"
eyre = "*"
hyper = { workspace = true, features = ["http2"] }
hyper-util = { workspace = true, features = ["tokio"] }
http-body-util = "0.1.2"
ipnetwork = "*"
lazy_static = "1.4.0"
libc = "*"
log = "*"
lru = "0.12.1"
mac_address = "*"
once_cell = "*"
opentelemetry = { workspace = true }
prost = "0.13"
tokio = { workspace = true }
tonic = { workspace = true }

# [local-dependencies]
rpc = { path = "../rpc" }
forge-tls = { path = "../common/tls" }
metrics-endpoint = { path = "../common/metrics-endpoint" }

[dev-dependencies]
eyre = "*"
dhcproto = "0.12.0"
serde_json = "1.0.89"
test-cdylib = "1.1.0"
tempfile = "3"
rpc = { path = "../rpc" }

[build-dependencies]
cbindgen = "*"
cc = "1.0"
